WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58515
Translucent scrollbars on composited layers render incorrectly
https://bugs.webkit.org/show_bug.cgi?id=58515
Summary
Translucent scrollbars on composited layers render incorrectly
James Robinson
Reported
2011-04-13 22:51:03 PDT
See the attached test case. It appears that when the RenderLayer owning the scrollbars becomes composited we somehow render the translucent scrollbars twice on top of each other or something of the like. I can reproduce the issue in Chromium, WebKit nightlies, and minibrowser. The patch on
bug 57202
ensures that this bug doesn't happen when the overflow controls are on their own layer, but it doesn't help when the controls are not.
Attachments
testcase
(841 bytes, text/html)
2011-04-13 22:52 PDT
,
James Robinson
no flags
Details
Patch
(6.46 KB, patch)
2011-09-09 16:22 PDT
,
Simon Fraser (smfr)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-04-13 22:52:15 PDT
Created
attachment 89537
[details]
testcase This page has a div with overflow:auto with custom scrollbars set to rgba(0, 127, 0, 0.5). The div alternates between being composited and not composited every second. When it's composited, the scrollbar regions appear 'more green' then they should.
Simon Fraser (smfr)
Comment 2
2011-08-29 17:43:39 PDT
Looks like this was cased by
https://bugs.webkit.org/show_bug.cgi?id=23740
Simon Fraser (smfr)
Comment 3
2011-09-09 16:22:41 PDT
Created
attachment 106935
[details]
Patch
Simon Fraser (smfr)
Comment 4
2011-09-26 22:11:34 PDT
http://trac.webkit.org/changeset/96069
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug