Translucent scrollbars on composited layers render incorrectly https://bugs.webkit.org/show_bug.cgi?id=58515

Source/WebCore:

Reviewed by Sam Weinig.

Scrollbars in composited elements were getting drawn twice,
because r41203 moved the call to paintOverflowControls() out of
RenderLayer::paintLayer(), but forgot to change RenderLayerBacking::paintIntoLayer().

Test: compositing/scrollbar-painting.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::paintIntoLayer):

LayoutTests:

Reviewed by Sam Weinig.

Pixel test with translucent scrollbars, to test whether they get
rendered twice.

* compositing/scrollbar-painting-expected.png: Added.
* compositing/scrollbar-painting-expected.txt: Added.
* compositing/scrollbar-painting.html: Added.

Canonical link: https://commits.webkit.org/84842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96069 268f45cc-cd09-0410-ab3c-d52691b4dbfc